--- a/app/src/main/res/layout/activity_editarcorreo.xml
+++ b/app/src/main/res/layout/activity_editarcorreo.xml
@@ -78,6 +78,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="68dp"
         android:layout_marginEnd="140dp"
+        android:onClick="confirmeditcorreo"
         android:backgroundTint="#2CD1CC"
         android:text="@string/Text_confirm2"
         app:layout_constraintEnd_toEndOf="parent"
