--- a/app/src/main/res/layout/activity_cambiarcontrase.xml
+++ b/app/src/main/res/layout/activity_cambiarcontrase.xml
@@ -81,6 +81,8 @@
         android:layout_marginStart="112dp"
         android:layout_marginTop="44dp"
         android:backgroundTint="#2CD1CC"
+        android:onClick="confirmpasword"
+
         android:text="@string/Text_confirm2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2" />
