--- a/app/src/main/res/layout/fragment_home_profesor.xml
+++ b/app/src/main/res/layout/fragment_home_profesor.xml
@@ -52,7 +52,7 @@
         app:layout_constraintTop_toBottomOf="@+id/NombreProfesor" />
 
     <ScrollView
-        android:id="@+id/scrollView3"
+        android:id="@+id/scrollprofesor"
         android:layout_width="410dp"
         android:layout_height="175dp"
         android:layout_marginBottom="148dp"
@@ -60,12 +60,13 @@
         app:layout_constraintEnd_toEndOf="parent">
 
         <TableLayout
-            android:id="@+id/tableLayout"
+            android:id="@+id/tablemateriasprofesor"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="168dp">
 
             <TableRow
+                android:id="@+id/tablarowprofesor"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
