--- a/app/src/main/res/layout/fragment_home_profesor.xml
+++ b/app/src/main/res/layout/fragment_home_profesor.xml
@@ -5,25 +5,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/ImageProfesor"
-        android:layout_width="104dp"
-        android:layout_height="118dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="40dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <TextView
         android:id="@+id/NombreProfesor"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="76dp"
-        android:layout_marginEnd="132dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="24dp"
         android:text="NOMBRE"
         android:textColor="#121111"
         android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:textAlignment="center" />
 
@@ -31,8 +22,8 @@
         android:id="@+id/TipoInicio"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:layout_marginEnd="48dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
         android:text="Tipo"
         android:textColor="#0E0E0E"
         app:layout_constraintEnd_toEndOf="parent"
@@ -42,28 +33,28 @@
         android:id="@+id/Asignatura"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="109dp"
-        android:layout_marginEnd="132dp"
+        android:layout_marginTop="32dp"
         android:text="@string/Asignatura"
         android:textAlignment="center"
         android:textColor="#0B0A0A"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/NombreProfesor" />
 
     <ScrollView
         android:id="@+id/scrollprofesor"
-        android:layout_width="410dp"
-        android:layout_height="175dp"
-        android:layout_marginBottom="148dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        android:layout_width="317dp"
+        android:layout_height="176dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Asignatura">
 
         <TableLayout
             android:id="@+id/tablemateriasprofesor"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="168dp">
+            android:layout_height="wrap_content">
 
             <TableRow
                 android:id="@+id/tablarowprofesor"
@@ -71,12 +62,12 @@
                 android:layout_height="match_parent">
 
                 <Space
-                    android:layout_width="12dp"
+                    android:layout_width="20dp"
                     android:layout_height="match_parent" />
 
                 <TextView
                     android:id="@+id/VistaMateriaProfe"
-                    android:layout_width="160dp"
+                    android:layout_width="119dp"
                     android:layout_height="match_parent"
                     android:text="Materia"
                     android:textColor="#0E0E0E" />
