--- a/app/src/main/res/layout/activity_enroll.xml
+++ b/app/src/main/res/layout/activity_enroll.xml
@@ -10,27 +10,50 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".ui.LoginActivity">
+    tools:context=".ui.LogInActivities.LoginActivity">
+
+    <Button
+        android:id="@+id/login"
+        android:layout_width="117dp"
+        android:layout_height="39dp"
+        android:layout_gravity="start"
+        android:layout_marginStart="48dp"
+        android:layout_marginTop="80dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="60dp"
+        android:background="#DB442B"
+        android:focusable="true"
+        android:text="@string/Confirmar"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.985"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textDescripcion" />
 
     <Button
         android:id="@+id/BtonCancelar"
         android:layout_width="117dp"
         android:layout_height="39dp"
         android:layout_gravity="start"
-        android:layout_marginStart="32dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginStart="48dp"
+        android:layout_marginTop="80dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="60dp"
         android:background="#DB442B"
         android:focusable="true"
         android:text="@string/Cancelar"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textDescripcion" />
 
     <TextView
         android:id="@+id/textMateria"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="60dp"
         android:shadowColor="#FFFFFF"
         android:text="@string/Materia"
         android:textColor="#000000"
@@ -40,22 +63,26 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Spinner
-        android:id="@+id/spinnerProfesor"
-        android:layout_width="185dp"
-        android:layout_height="39dp"
+    <TextView
+        android:id="@+id/puntuacionView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="12dp"
-        android:spinnerMode="dialog"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="24dp"
+        android:shadowColor="#FFFFFF"
+        android:textColor="#000000"
+        android:textColorHighlight="#FFFFFF"
+        android:textColorHint="#FFFFFF"
+        android:textSize="30sp"
+        app:layout_constraintStart_toEndOf="@+id/spinnerProfesor"
         app:layout_constraintTop_toBottomOf="@+id/textMateria" />
 
     <TextView
         android:id="@+id/descripcionView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="24dp"
         android:shadowColor="#FFFFFF"
         android:text="@string/Comentario"
         android:textColor="#000000"
@@ -63,34 +90,32 @@
         android:textColorHint="#FFFFFF"
         android:textSize="30sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/califMatProfe" />
+        app:layout_constraintTop_toBottomOf="@+id/puntuacionView" />
 
-    <ScrollView
-        android:id="@+id/scrollViewEnroll"
-        android:layout_width="328dp"
-        android:layout_height="225dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
+    <TextView
+        android:id="@+id/textDescripcion"
+        android:layout_width="319dp"
+        android:layout_height="270dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="24dp"
+        android:shadowColor="#FFFFFF"
+        android:text="@string/Descripcion"
+        android:textColor="#000000"
+        android:textColorHighlight="#FFFFFF"
+        android:textColorHint="#FFFFFF"
+        android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.49"
+        app:layout_constraintHorizontal_bias="0.159"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/descripcionView">
-
-        <TextView
-            android:id="@+id/textDescripcion"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAlignment="inherit"
-            android:textSize="30sp" />
-    </ScrollView>
+        app:layout_constraintTop_toBottomOf="@+id/descripcionView" />
 
     <TextView
         android:id="@+id/materiaView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="52dp"
+        android:layout_marginTop="60dp"
         android:shadowColor="#FFFFFF"
         android:textColor="#000000"
         android:textColorHighlight="#FFFFFF"
@@ -99,25 +124,16 @@
         app:layout_constraintStart_toEndOf="@+id/textMateria"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <RatingBar
-        android:id="@+id/califMatProfe"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="12dp"
-        android:clickable="false"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spinnerProfesor" />
-
-    <Button
-        android:id="@+id/BtonConfirmar"
-        android:layout_width="117dp"
+    <Spinner
+        android:id="@+id/spinnerProfesor"
+        android:layout_width="185dp"
         android:layout_height="39dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginBottom="16dp"
-        android:background="#DB442B"
-        android:text="@string/Confirmar"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintEnd_toStartOf="@+id/puntuacionView"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textMateria" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
