--- a/app/src/main/res/layout/activity_resena.xml
+++ b/app/src/main/res/layout/activity_resena.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -9,60 +9,40 @@
         android:id="@+id/boton_volver_info_materia"
         android:layout_width="260dp"
         android:layout_height="45dp"
-        android:layout_marginBottom="28dp"
         android:background="#00B0FF"
         android:text="Volver a la informacion materia"
         android:textAllCaps="false"
         android:textColor="#000000"
         android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
-        app:layout_constraintStart_toStartOf="parent" />
+        tools:layout_editor_absoluteX="76dp"
+        tools:layout_editor_absoluteY="607dp" />
 
     <TextView
         android:id="@+id/Reseña_titulo"
         android:layout_width="156dp"
         android:layout_height="55dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="28dp"
         android:text="Materia: "
         android:textColor="#000000"
         android:textSize="36sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar7" />
+        tools:layout_editor_absoluteX="43dp"
+        tools:layout_editor_absoluteY="119dp" />
 
     <RatingBar
         android:id="@+id/ratingBar_reseña_final"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Reseña_titulo" />
+        tools:layout_editor_absoluteX="76dp"
+        tools:layout_editor_absoluteY="210dp" />
 
     <EditText
         android:id="@+id/Reseña_final"
-        android:layout_width="290dp"
-        android:layout_height="248dp"
-        android:layout_marginTop="36dp"
+        android:layout_width="287dp"
+        android:layout_height="236dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Reseña final"
         android:textColor="#3E000000"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ratingBar_reseña_final" />
-
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar7"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        tools:layout_editor_absoluteX="62dp"
+        tools:layout_editor_absoluteY="336dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
