Revert "Merge branch 'main' into reseña-Nicolas-gil"
This reverts commit cea4e180cb876c9639b81943cdaee295b2ec3689, reversing
changes made to 12d2c3aa6b6b6d01826ef034e48c866fbfde92eb.

--- a/app/src/main/res/layout/fragment_suggestions.xml
+++ b/app/src/main/res/layout/fragment_suggestions.xml
@@ -9,20 +9,20 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="116dp"
-        android:text="@string/send"
+        android:text="Enviar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/suggestionTitle"
+        android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="120dp"
         android:clickable="false"
         android:fontFamily="sans-serif-black"
-        android:text="@string/SuggestionsTitle"
+        android:text="Sugerencias"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -33,7 +33,7 @@
         android:id="@+id/textSuggestions"
         android:layout_width="235dp"
         android:layout_height="332dp"
-        android:hint="@string/textSuggestion"
+        android:hint="Comentenos tus opiniones o sugerencias"
         android:inputType="text"
         android:singleLine="false"
         android:textAlignment="textStart"
@@ -41,7 +41,19 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.495" />
+        app:layout_constraintVertical_bias="0.498" />
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar2"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="62dp"
+        android:background="?attr/colorPrimary"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/send_suggestion" />
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar3"
