--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -8,8 +8,9 @@
     <fragment
         android:id="@+id/nav_home"
         android:name="com.example.rankingu.ui.home.HomeFragment"
-        android:label="@string/menu_home"
-        tools:layout="@layout/fragment_home_estudiante" />
+        android:label="@string/app_name"
+        tools:layout="@layout/fragment_home_estudiante" >
+    </fragment>
 
     <fragment
         android:id="@+id/nav_gallery"
@@ -39,7 +40,7 @@
         android:id="@+id/nav_send"
         android:name="com.example.rankingu.ui.Settings.SettingsFragment"
         android:label="@string/menu_settings"
-        tools:layout="@layout/fragment_settings" />
+        tools:layout="@layout/fragment_ajustes" />
 
     <fragment
         android:id="@+id/nav_error"
