--- a/app/src/main/res/layout/activity_atributos_calificar.xml
+++ b/app/src/main/res/layout/activity_atributos_calificar.xml
@@ -173,4 +173,20 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/materia_calificar_atributos"
+        android:layout_width="184dp"
+        android:layout_height="41dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintStart_toEndOf="@+id/Materia_atributos_calificar"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar4" />
+
+    <TextView
+        android:id="@+id/docente_calificar_atributos"
+        android:layout_width="182dp"
+        android:layout_height="42dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintStart_toEndOf="@+id/materia"
+        app:layout_constraintTop_toBottomOf="@+id/materia_calificar_atributos" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
