--- a/app/src/main/res/layout/activity_resena.xml
+++ b/app/src/main/res/layout/activity_resena.xml
@@ -25,7 +25,7 @@
         android:layout_width="156dp"
         android:layout_height="55dp"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="32dp"
         android:text="Materia: "
         android:textColor="#000000"
         android:textSize="36sp"
@@ -36,24 +36,11 @@
         android:id="@+id/ratingBar_reseña_final"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Reseña_titulo" />
-
-    <EditText
-        android:id="@+id/Reseña_final"
-        android:layout_width="290dp"
-        android:layout_height="248dp"
-        android:layout_marginTop="36dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Reseña final"
-        android:textColor="#3E000000"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ratingBar_reseña_final" />
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar7"
@@ -64,5 +51,15 @@
         android:theme="?attr/actionBarTheme"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/Reseña_final"
+        android:layout_width="289dp"
+        android:layout_height="208dp"
+        android:layout_marginTop="36dp"
+        android:text="TextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ratingBar_reseña_final" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
