--- a/app/src/main/res/layout/activity_search_materia.xml
+++ b/app/src/main/res/layout/activity_search_materia.xml
@@ -19,6 +19,12 @@
     <ListView
         android:id="@+id/materiaListView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="114dp"/>
+
+    <Button
+        android:id="@+id/materiaB1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Button" />
 
 </LinearLayout>
