--- a/app/src/main/res/layout/activity_search_profesor.xml
+++ b/app/src/main/res/layout/activity_search_profesor.xml
@@ -1,86 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".ui.Search.Search_Profesor">
 
-    <Button
-        android:id="@+id/profesor1"
-        android:layout_width="243dp"
-        android:layout_height="98dp"
-        android:layout_marginStart="81dp"
-        android:layout_marginTop="39dp"
-        android:layout_marginEnd="136dp"
-        android:layout_marginBottom="13dp"
-        android:text="Profesor 1"
-        app:layout_constraintBottom_toTopOf="@+id/profesor3"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextBusqueda" />
-
-    <Button
-        android:id="@+id/profesor2"
-        android:layout_width="243dp"
-        android:layout_height="98dp"
-        android:layout_marginStart="81dp"
-        android:layout_marginTop="17dp"
-        android:layout_marginEnd="136dp"
-        android:layout_marginBottom="200dp"
-        android:text="Profesor 2"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/profesor3" />
-
-    <Button
-        android:id="@+id/profesor3"
-        android:layout_width="243dp"
-        android:layout_height="98dp"
-        android:layout_marginStart="81dp"
-        android:layout_marginTop="17dp"
-        android:layout_marginEnd="136dp"
-        android:layout_marginBottom="17dp"
-        android:text="Profesor 3"
-        app:layout_constraintBottom_toTopOf="@+id/profesor2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/profesor1" />
-
-    <EditText
-        android:id="@+id/editTextBusqueda"
-        android:layout_width="wrap_content"
+    <SearchView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="56dp"
-        android:layout_marginTop="80dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="16dp"
-        android:ems="10"
-        android:hint="Busqueda"
-        android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/profesor1"
-        app:layout_constraintEnd_toStartOf="@+id/BotonBuscar"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:id="@+id/profesorSearchView"
+        android:iconifiedByDefault="false"
+        android:queryHint="Profesor"></SearchView>
 
-    <Button
-        android:id="@+id/BotonBuscar"
-        android:layout_width="90dp"
-        android:layout_height="45dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="80dp"
-        android:layout_marginEnd="80dp"
-        android:layout_marginBottom="35dp"
-        android:text="Search"
-        app:layout_constraintBottom_toTopOf="@+id/profesor1"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/editTextBusqueda"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+    <ListView
+        android:id="@+id/profesorListView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
+
