LA PARTE DE SOPORTE

--- a/app/src/main/res/layout/activity_materia.xml
+++ b/app/src/main/res/layout/activity_materia.xml
@@ -18,6 +18,17 @@
         app:layout_constraintTop_toBottomOf="@+id/toolbar6" />
 
     <TextView
+        android:id="@+id/textView21"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:text="TextView"
+        android:textSize="30sp"
+        app:layout_constraintStart_toEndOf="@+id/nombre_materia"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar6" />
+
+    <TextView
         android:id="@+id/nombre_materia2"
         android:layout_width="171dp"
         android:layout_height="36dp"
@@ -120,5 +131,28 @@
                 android:layout_height="44dp" />
         </TableRow>
     </ScrollView>
+
+    <TextView
+        android:id="@+id/textView22"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:text="TextView"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/nombre_materia4"
+        app:layout_constraintTop_toBottomOf="@+id/boton_inscribir_materia2"
+        app:layout_constraintVertical_bias="0.311" />
+
+    <TextView
+        android:id="@+id/textView23"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="20dp"
+        android:text="TextView"
+        android:textSize="24sp"
+        app:layout_constraintStart_toEndOf="@+id/nombre_materia5"
+        app:layout_constraintTop_toBottomOf="@+id/textView22" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
