--- a/app/src/main/res/layout/activity_resena.xml
+++ b/app/src/main/res/layout/activity_resena.xml
@@ -22,8 +22,8 @@
 
     <TextView
         android:id="@+id/Reseña_titulo"
-        android:layout_width="150dp"
-        android:layout_height="52dp"
+        android:layout_width="144dp"
+        android:layout_height="51dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
         android:text="Materia: "
@@ -36,7 +36,7 @@
         android:id="@+id/ratingBar_reseña_final"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="28dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
@@ -67,7 +67,9 @@
         android:id="@+id/materia_activity_reseña"
         android:layout_width="230dp"
         android:layout_height="52dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="36dp"
+        android:textColor="#000000"
+        android:textSize="30sp"
         app:layout_constraintStart_toEndOf="@+id/Reseña_titulo"
         app:layout_constraintTop_toBottomOf="@+id/toolbar7" />
 
